glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/person-properties.glx
person_properties:
  name:
    label: "Name"
    description: "Person's name as recorded"
    value_type: string
    temporal: true
    fields:
      given:
        label: "Given Name"
        description: "Given/first name(s)"
      surname:
        label: "Surname"
        description: "Family name"
  custom_property:
    label: "Custom Property"
    value_type: string
  birth_place:
    label: "Birth Place"
    value_type: reference
    reference_type: places


